tests/fail/for_non_valued_lower.tig
for i := () to 10 do i
