tests/fail/for_non_valued_lower.err
Semantic Error: The expression for the lower bound of the for loop at line 1 does not return a value.
